@@ -1,3 +1,8 @@
+2009-09-22  Olivier Berten  <olivier.berten@gmail.com>
+
+ * swatchbook/codecs.py,swatchbook/icc.py:
+   Fixed opening binary files on Windows
+
 2009-09-19  Olivier Berten  <olivier.berten@gmail.com>
 
  * swatchbooker.pyw,swatchbook/__init__.py,swatchbook/codecs.py,swatchbook/color.py:
